--- a/.editorconfig
+++ b/.editorconfig
@@ -1,25 +1,28 @@
+# EditorConfig is awesome: https://EditorConfig.org
 
-# see https://github.com/CppCXY/EmmyLuaCodeStyle
-[*.lua]
+# top-most EditorConfig file
+root = true
+
+[*]
 # [basic]
 
 # optional space/tab
 indent_style = space
 # if indent_style is space, this is valid
-indent_size = 4
+indent_size = 2
 # if indent_style is tab, this is valid
-tab_width = 4
+tab_width = 2
 # none/single/double
-quote_style = single
+quote_style = none
 
-continuation_indent = 4
+continuation_indent = 2
 
 # this mean utf8 length , if this is 'unset' then the line width is no longer checked
 # this option decides when to chopdown the code
 max_line_length = unset
 
 #optional keep/never/always/smart
-trailing_table_separator = smart
+trailing_table_separator = keep
 
 # keep/remove/remove_table_only/remove_string_only
 call_arg_parentheses = keep
